<resources>

    <string name="app_name">CASH 1</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="login_button_label">Log in</string>
    <string name="register_button_label">New User Registration</string>

    <string name="splash_login_button_hint">CASH 1 Customers</string>
    <string name="splash_login_button_body">Go to Log in</string>
    <string name="splash_register_button_hint">New Customers</string>
    <string name="splash_register_button_body">Apply Now!</string>
    <string name="first_name_hint">First Name</string>
    <string name="last_name_hint">Last Name</string>
    <string name="email_hint">Email Address</string>
    <string name="submit_button_label">Submit</string>
    <string name="register_hint_header">Help us Identify You</string>
    <string name="register_hint_body">Enter your name and email address you used when setting up you Cash1 account</string>
    <string name="temp_pass_hint_header">Check out inbox</string>
    <string name="temp_pass_hint_body">Your username has been found, and we send the temporary password to your email. If you can\'t see it, call us at 877-85-2441.</string>
    <string name="temp_password_hint">Temporary Password</string>
    <string name="password_confirm_hint">Confirm Password</string>
    <string name="change_pass_hint_header">Change temporary password</string>
    <string name="change_pass_hint_body">Please set your personalized password to be used at log in</string>
    <string name="change_pass_button_label">Submit</string>
    <string name="title_activity_password_change">Change Password</string>
    <string name="security_question_hint_header">Select security question</string>
    <string name="security_question_hint_body">This question will be used to recover your login credentials in secure manner</string>
    <string name="security_answer_hint">Security Answer</string>
    <string name="security_question_hint">Security Question</string>
    <string name="main_menu_button_label">Main Menu</string>
    <string name="login_help_button_label">Log in help</string>
    <string name="login_retry_hint_header">Re-enter your login credentials</string>
    <string name="email_username_button_label">Email My Username</string>
    <string name="email_password_button_label">Email My Password</string>
    <string name="text_username_button_label">Text My Username</string>
    <string name="text_password_button_label">Text My Password</string>
    <string name="sec_quest_challenge_hint_header">Please answer the question you set up during the registration</string>
    <string name="title_activity_main">Home Menu</string>
    <string name="get_cash">Get cash/refinance</string>
    <string name="make_payment">Make a payment</string>
    <string name="update_info">Update information</string>
    <string name="account_details">View account details</string>
    <string name="credit_limit">Increase credit limit</string>
    <string name="logout_header">Log out success</string>
    <string name="logout_body">Thank you for using CASH 1 mobile!</string>
    <string name="action_logout">Log out</string>
    <string name="action_locations">Locations</string>
    <string name="action_faq">FAQ</string>
    <string name="action_contact_us">Contact us</string>
    <string name="amount_hint">[$XXXXX]</string>
    <string name="current_location_button_label">Use Current Location</string>
    <string name="enter_address_button_label">Use ZIP code or address</string>
    <string name="arizona_button_label">CASH 1 in Arizona</string>
    <string name="nevada_button_label">CASH 1 in Nevada</string>
    <string name="washington_button_label">CASH 1 in Washington</string>
    <string name="title_activity_faq">FaqActivity</string>
    <string name="faq_load_error">Failed to load questions. Check your network connection.</string>
    <string name="close_button_label">Close</string>
    <string name="call_us_button_label">Call CASH 1 Now</string>
    <string name="menu_toggle_label">M\u200Ae\u200An\u200Au</string>
    <string name="ask_for_location_message">CASH 1 would like to use your current location</string>
    <string name="basic_error_message_login">We\'re sorry. We can\'t seem to locate your account. Please call one of our Customer Service representatives for further assistance.</string>
    <string name="basic_error_message">We\'re sorry. There seems to be an issue with your account. Please call one of our Customer Service representatives for further assistance.</string>
    <string name="null_value_placeholder">Unspecified</string>
    <string name="title_activity_maps">Map</string>
    <string name="address_button_label">Use Zip Code or Address</string>
    <string name="no_location_detected">No location detected. Make sure location is enabled on the device.</string>
    <string name="very_close">Very close</string>
    <string name="title_activity_payment_account">PaymentAccountActivity</string>
    <string name="title_activity_new_account">NewAccountActivity</string>
    <string name="title_activity_payment_confirmation">PaymentConfirmationActivity</string>
    <string name="receipt"><i>A receipt of your payment will also be sent to your email and text message accounts on file.</i></string>

</resources>
