<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            style="@style/ContainerScroll">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="24dp"
            android:background="@drawable/actionbar_subheader"
            android:textAllCaps="true"
            android:textColor="#e1ffffff"
            android:text="New user registration"
            android:gravity="top|center_horizontal"
            android:textStyle="bold"/>

        <LinearLayout
            style="@style/ContainerLayout">

            <TextView
                android:text="@string/change_pass_hint_header"
                style="@style/TextHeader"/>

            <TextView
                android:text="@string/change_pass_hint_body"
                style="@style/TextBody"/>

            <EditText
                android:id="@+id/password"
                android:hint="@string/password_hint"
                android:inputType="textPassword"
                style="@style/EditTextLogin"
                android:layout_marginTop="36dp"/>

            <EditText
                android:id="@+id/password_confirm"
                android:hint="@string/password_confirm_hint"
                android:inputType="textPassword"
                style="@style/EditTextLogin"
                android:layout_marginTop="8dp"/>

            <Button
                android:id="@+id/change"
                android:text="@string/change_pass_button_label"
                android:onClick="changePassword"
                style="@style/ButtonSubmitPrimary"/>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">

                <ImageButton
                    style="@style/ButtonGuarantee"/>

            </FrameLayout>

        </LinearLayout>

    </LinearLayout>

</ScrollView>