<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView style="@style/ContainerScroll">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="24dp"
                android:background="@drawable/actionbar_subheader"
                android:gravity="top|center_horizontal"
                android:text="Find locations"
                android:textAllCaps="true"
                android:textColor="#e1ffffff"
                android:textStyle="bold" />

            <LinearLayout
                style="@style/ContainerLayout"
                android:layout_height="wrap_content">

                <TextView
                    style="@style/Subheader"
                    android:layout_marginTop="18dp"
                    android:text="Find the nearest CASH 1 location" />

                <Button
                    android:id="@+id/current_location_button"
                    style="@style/ButtonSubmitPrimary"
                    android:layout_marginTop="9dp"
                    android:onClick="findUsingCurrentLocation"
                    android:text="@string/current_location_button_label" />

                <Button
                    android:id="@+id/address_button"
                    style="@style/ButtonSubmitPrimary"
                    android:layout_marginTop="9dp"
                    android:onClick="findWithAddress"
                    android:text="@string/address_button_label" />

                <TextView
                    style="@style/Subheader"
                    android:layout_marginTop="32dp"
                    android:text="Find by state"
                    android:textSize="16sp" />

                <Button
                    android:id="@+id/arizona_button"
                    style="@style/ButtonSubmitPrimary"
                    android:onClick="findInArizona"
                    android:text="@string/arizona_button_label" />

                <Button
                    android:id="@+id/nevada_button"
                    style="@style/ButtonSubmitPrimary"
                    android:onClick="findInNevada"
                    android:text="@string/nevada_button_label" />

                <Button
                    android:id="@+id/washington_button"
                    style="@style/ButtonSubmitPrimary"
                    android:onClick="findInWashington"
                    android:text="@string/washington_button_label" />

                <Button
                    android:id="@+id/main_menu"
                    style="@style/ButtonMainMenu"
                    android:layout_width="match_parent"
                    android:layout_height="52dp"
                    android:layout_marginBottom="86dp"
                    android:layout_marginTop="48dp"
                    android:onClick="navigateToMainMenu"
                    android:paddingLeft="40dp"
                    android:paddingRight="40dp"
                    android:text="@string/main_menu_button_label"
                    android:textSize="20sp" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

    <include
        layout="@layout/footer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true" />

</RelativeLayout>