<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            style="@style/ContainerScroll">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="24dp"
            android:background="@drawable/actionbar_subheader"
            android:textAllCaps="true"
            android:textColor="#e1ffffff"
            android:text="New user registration"
            android:gravity="top|center_horizontal"
            android:textStyle="bold"/>

        <LinearLayout
            style="@style/ContainerLayout">

            <TextView
                android:text="@string/temp_pass_hint_header"
                style="@style/TextHeader"/>

            <TextView
                android:text="@string/temp_pass_hint_body"
                android:autoLink="phone"
                style="@style/TextBody"
                android:layout_marginBottom="40dp"/>

            <TextView
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:textSize="20sp"
                android:fontFamily="sans-serif-light"
                android:singleLine="true"
                tools:text="Username: AlekseySheyko"/>

            <EditText
                android:id="@+id/password"
                android:hint="@string/temp_password_hint"
                android:inputType="textPassword"
                style="@style/EditTextLogin"
                android:layout_marginTop="12dp"/>

            <Button
                android:id="@+id/send"
                android:text="@string/login_button_label"
                style="@style/ButtonSubmitPrimary"
                android:onClick="checkPassword"/>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">

                <ImageButton
                    style="@style/ButtonGuarantee"/>

            </FrameLayout>

        </LinearLayout>

    </LinearLayout>

</ScrollView>