<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/ContainerScroll"
    tools:context=".LoginActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout style="@style/ContainerLayout">

            <ImageView style="@style/ScreenLogoBig" />

            <EditText
                android:id="@+id/username"
                style="@style/EditTextLogin"
                android:layout_marginTop="40dp"
                android:hint="@string/username_hint"
                android:inputType="textEmailAddress" />

            <EditText
                android:id="@+id/password"
                style="@style/EditTextLogin"
                android:layout_marginTop="6dp"
                android:hint="@string/password_hint"
                android:inputType="textPassword" />

            <Button
                android:id="@+id/login"
                style="@style/ButtonSubmitPrimary"
                android:onClick="login"
                android:text="@string/login_button_label"
                android:textSize="18sp" />

            <Button
                android:id="@+id/register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/btn_register_selector"
                android:onClick="navigateToRegisterActivity"
                android:text="@string/register_button_label"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                android:visibility="gone"
                tools:visibility="visible" />

            <ImageButton
                android:layout_width="150dp"
                android:layout_height="24dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="16dp"
                android:adjustViewBounds="true"
                android:background="@null"
                android:onClick="helpLogin"
                android:scaleType="fitXY"
                android:src="@drawable/btn_login_help" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="bottom">

                <FrameLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <ImageButton style="@style/ButtonGuarantee" />

                </FrameLayout>

                <FrameLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <ToggleButton
                        android:id="@+id/toggle_remember"
                        android:layout_width="144dp"
                        android:layout_height="24dp"
                        android:layout_gravity="bottom|end"
                        android:background="@drawable/btn_remember_selector"
                        android:checked="false"
                        android:textOff=""
                        android:textOn="" />

                </FrameLayout>

            </LinearLayout>

        </LinearLayout>

        <FrameLayout
            android:id="@+id/loading"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#8d000000"
            android:visibility="gone"
            android:clickable="true">

            <ProgressBar
                style="?android:attr/progressBarStyleLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center" />

        </FrameLayout>

    </FrameLayout>

</ScrollView>
